# hathor-mcp-stack

./: .gitignore  .gitmodules  QA.md  README.md  docker-compose.yml
faucet/: Cargo.toml  Dockerfile
faucet/src/: main.rs
faucet/static/: index.html
mcp-docs/: Dockerfile  index.html  nginx.conf
