[package]
name = "hathor-faucet"
version = "0.1.0"
edition = "2021"
description = "Hathor testnet faucet with dynamic drip and IP rate limiting"
authors = ["Hathor Labs"]
license = "MIT"

[dependencies]
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
